--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,7 +137,7 @@ jobs:
         with:
           fetch-depth: 1
       - name: Build for Linux
-        uses: ./build-for-linux
+        uses: ./.github/actions/build-for-linux
         with:
           target: ${{ matrix.target }}
           toolchain: stable-${{ matrix.target }}
